--- a/client/hues/src/components/Home.css
+++ b/client/hues/src/components/Home.css
@@ -1,96 +1,178 @@
-body{
-    background-color: #B8C1EC;
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,400;0,500;1,400;1,500&family=Bungee&family=Comfortaa:wght@300..700&family=DM+Sans:opsz,wght@9..40,200;9..40,400&family=Irish+Grover&family=Jost&family=Kavivanar&family=Kreon&family=Merriweather&family=Montserrat:wght@300&family=Mukta:wght@500&family=NTR&family=Nunito:wght@500;900&family=Playfair+Display:wght@400;500&family=Poppins:ital,wght@0,400;1,200&family=Roboto:wght@300&display=swap");
+
+body {
+  background-color: #b8c1ec;
 }
 
-nav{
-    background-color: #232946;
-    height: 20vh;
+nav {
+  background-color: #232946;
+  height: 20vh;
 }
 
-.search{
-    height:5vh;
-    width:27vw;
-    border-radius: 35px;
-    border: 1.8px solid white;
-    background-color: transparent;
-    position: absolute;
-    left: 20vw;
-    top: 8.8vh; 
-    color: white;
-
+.search {
+  height: 5vh;
+  width: 27vw;
+  border-radius: 35px;
+  border: 1.8px solid white;
+  background-color: transparent;
+  position: absolute;
+  left: 20vw;
+  top: 8.8vh;
+  color: white;
 }
 
-.search::placeholder{
-        
-        align-items: center;
-        text-align: center;
-        font-size: 1.1em;    
-        color: rgb(221, 221, 219);
-        
+.search::placeholder {
+  align-items: center;
+  text-align: center;
+  font-size: 1.1em;
+  color: rgb(221, 221, 219);
 }
 
-    .explore-btn{
-        background-color: transparent;
-        color: white;
-        position: absolute;
-        left: 116vh;
-        top: 9vh;
-        font-size: 1em;
-        border: none;
-    }
+.explore-btn {
+  background-color: transparent;
+  color: white;
+  position: absolute;
+  left: 116vh;
+  top: 9vh;
+  font-size: 1em;
+  border: none;
+}
 
-    .desi-btn{
-        background-color: transparent;
-        color: white;
-        position: absolute;
-        left: 134vh;
-        top: 9vh;
-        font-size: 1em;
-        border: none;
-    }
+.desi-btn {
+  background-color: transparent;
+  color: white;
+  position: absolute;
+  left: 134vh;
+  top: 9vh;
+  font-size: 1em;
+  border: none;
+}
 
-    .create-btn{
-        background-color: transparent;
-        color: white;
-        position: absolute;
-        left: 153vh;
-        top: 9vh;
-        font-size: 1em;
-        border: none;
+.create-btn {
+  background-color: transparent;
+  color: white;
+  position: absolute;
+  left: 153vh;
+  top: 9vh;
+  font-size: 1em;
+  border: none;
+}
 
-    }
-
-
-    .explore-btn,
+.explore-btn,
 .desi-btn,
 .create-btn {
-    background-color: transparent;
-    color: white;
-    position: absolute;
-    font-size: 1em;
-    border: none;
-    transition: color 0.3s, border-bottom-color 0.3s;
-    cursor: pointer;
+  background-color: transparent;
+  color: white;
+  position: absolute;
+  font-size: 1em;
+  border: none;
+  transition: color 0.3s, border-bottom-color 0.3s;
+  cursor: pointer;
 }
 
 .explore-btn:hover,
 .desi-btn:hover,
 .create-btn:hover {
-    color: #00FFFF; /* Change to desired color on hover */
-    border-bottom: 2px solid #00FFFF; /* Change to desired underline color and thickness */
+  color: #00ffff;
+  border-bottom: 2px solid #00ffff;
 }
 
+.home-img {
+  height: 90vh;
+  position: absolute;
+  left: 63vw;
+}
 
+.title-text {
+  font-size: 2.5em;
+  position: absolute;
+  top: 50vh;
+  left: 9vw;
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  color: #111838;
+}
 
-.home-img{
-    height: 90vh;
+.explore {
+  position: absolute;
+  top: 60vh;
+  left: 17vw;
+  height: 6vh;
+  width: 6vw;
+  border-radius: 8px;
+  font-size: 1em;
+  color: azure;
+  background-color: #240e3b;
+}
+
+.create {
+  position: absolute;
+  top: 60vh;
+  left: 25vw;
+  height: 6vh;
+  width: 6vw;
+  border-radius: 8px;
+  font-size: 1em;
+  color: azure;
+  background-color: #240e3b;
+}
+
+.grid-img {
+  position: absolute;
+  top: 110vh;
+  left: 10vw;
+}
+
+.name-college {
+  position: absolute;
+  top: 120vh;
+  left: 50vw;
+  font-size: 1.7em;
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-weight: 550;
+  font-style: normal;
+  color: #111838;
+}
+
+.uni-img{
     position: absolute;
-    left: 63vw;
-
+    top: 133vh;
+    left: 50vw;
+    
 }
 
+.image1{
+    height: 18vh;
+    width: 8vw;
+    border-radius: 400px;
+}
 
-.title-text{
-    font-size: 2em;
+.image2{
+    height: 18vh;
+    margin-left: 2vw;
+}
 
+.image3{
+    height: 18vh;
+    margin-left: 2vw;
+    border-radius: 400px;
+}
+
+.dress-img{
+    position: absolute;
+    top: 195vh;
+    right: 8vw;
+}
+
+.para{
+    position: absolute;
+    height: 10vh;
+    width:40vw;
+    top: 210vh;
+    left: 11vw;
+    font-family: "Alegreya Sans SC", sans-serif;
+
+  font-style: normal;
+  font-size: 1.3em;
 }
