--- a/client/hues/src/components/Home.css
+++ b/client/hues/src/components/Home.css
@@ -287,3 +287,64 @@ hr{
   left: 8vw;
   
 }
+
+footer {
+  /* background-color: #e0e7ff; Adjust based on your design */
+  padding: 1rem 0;
+  color: #000;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+  position: relative;
+  /* top: 200px; */
+
+}
+
+/* .footer-logo img {
+  width: 100px; /* Adjust size as needed */
+  
+
+.footer-column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer-column h3 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-column ul li {
+  margin-bottom: 0.5rem;
+}
+
+.footer-column ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 0.9rem;
+}
+
+.footer-column ul li a:hover {
+  text-decoration: underline;
+}
+
+.social-icons img {
+  width: 20px; /* Adjust size as needed */
+  margin-right: 0.5rem;
+}
+
+.social-icons img:hover {
+  filter: brightness(0.8);
+}
